[plclogo] Add implementation for diagnostics channel.
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>